Fix wordle game on smaller devices

--- a/components/wordle/remaining-answers/remaining-answers.module.css
+++ b/components/wordle/remaining-answers/remaining-answers.module.css
@@ -2,6 +2,8 @@
     display:flex;
     flex-direction: column;
     align-items: center;
+    border: 0.1rem solid #0003;
+    padding: 0.2rem;
 }
 .answerList {
     list-style-type: none;
@@ -13,6 +15,8 @@
     font-family: monospace, monospace; 
 }
 .title{
+    text-align: center;
+    font-size: medium;
     font-weight: 200;
 }
 .count{
